framec_tests/language_specific/rust/v3_facade_smoke/negative/transition_unquoted_state.frm
@target rust

system S {
    machine:
        $A {
            e() {
                __frame_transition(B);
            }
        }
}

